created nav that opens popover on click and shows nav that is 50vw wide and positioned 50vw from left, and that is 5vh (ie header height) from top

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,5 +1,11 @@
 /* Write your global styles here, in PostCSS syntax */
 
+/* variables */
+:root {
+  --header-height: 5vh;
+}
+
+
 /* https://www.joshwcomeau.com/css/custom-css-reset/  */
 
 /*
