--- a/src/app.postcss
+++ b/src/app.postcss
@@ -13,7 +13,10 @@
 	--size-800: clamp(2.14rem, 1.74rem + 1.99vw, 3.16rem);
 	--size-900: clamp(2.67rem, 2.07rem + 3vw, 4.21rem);
 	--size-1000: clamp(3.34rem, 2.45rem + 4.43vw, 5.61rem);
+	--desktop: 992px;
 }
+
+
 
 /* https://www.joshwcomeau.com/css/custom-css-reset/  */
 
