added colours as css custom props to app.postcss

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,6 +5,7 @@
 :root {
 	--header-height: 8vh;
 	--nav-width: 70vw;
+	/* font sizes */
 	--size-300: clamp(0.7rem, 0.66rem + 0.2vw, 0.8rem);
 	--size-400: clamp(0.88rem, 0.83rem + 0.24vw, 1rem);
 	--size-500: clamp(1.09rem, 1rem + 0.47vw, 1.33rem);
@@ -13,10 +14,31 @@
 	--size-800: clamp(2.14rem, 1.74rem + 1.99vw, 3.16rem);
 	--size-900: clamp(2.67rem, 2.07rem + 3vw, 4.21rem);
 	--size-1000: clamp(3.34rem, 2.45rem + 4.43vw, 5.61rem);
+	/* breakpoint */
 	--desktop: 992px;
+	/* colours */
+	--swatch-1: oklch(95% 0.02 240);
+	--swatch-2: oklch(87% 0.06 240);
+	--swatch-3: oklch(80% 0.1 240);
+	--swatch-4: oklch(76% 0.13 223);
+	--swatch-5: oklch(62% 0.22 250);
+	--swatch-6: oklch(51% 0.15 250);
+	--swatch-7: oklch(42% 0.15 250);
+	--swatch-8: oklch(24% 0.16 264);
+	--swatch-9: oklch(21% 0.14 264);
+	--swatch-10: oklch(16% 0.09 264);
+
+	--text-1: var(--swatch-1);
+	--text-2: var(--swatch-2);
+	--link: var(--swatch-3);
+	--surface-1: var(--swatch-10);
+	--surface-2: var(--swatch-9);
+	--surface-3: var(--swatch-8);
+
+	--yellow-1: oklch(90% 0.12 90);
+	--yellow-2: oklch(87% 0.2 90);
+	--yellow-3: oklch(82% 0.19 90);
 }
-
-
 
 /* https://www.joshwcomeau.com/css/custom-css-reset/  */
 
