componentised .gridContainer from +page.svelte as MainGrid, switched Day.svelte -> Meal.svelte, componentised Day.svelte

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,8 +3,11 @@
 /* variables */
 /* font sizes from https://css-tricks.com/consistent-fluidly-scaling-type-and-spacing/ */
 :root {
+	/* element sizes */
 	--header-height: 8vh;
 	--nav-width: 70vw;
+	--stickyWidth: 30vw;
+	--desktopStickyWidth: 10vw;
 	/* font sizes */
 	--size-300: clamp(0.7rem, 0.66rem + 0.2vw, 0.8rem);
 	--size-400: clamp(0.88rem, 0.83rem + 0.24vw, 1rem);
@@ -38,6 +41,8 @@
 	--yellow-1: oklch(90% 0.12 90);
 	--yellow-2: oklch(87% 0.2 90);
 	--yellow-3: oklch(82% 0.19 90);
+
+	--overlay: oklch(100% 0 0 / 0.08);
 }
 
 /* https://www.joshwcomeau.com/css/custom-css-reset/  */
