added --footing-height and --main-height to app.postcss as css costom props, used in +layout.svelte, tidied CSS in MealListDayWithDay.svelte to remove unused props and center headings vertically

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,6 +5,8 @@
 :root {
 	/* element sizes */
 	--header-height: 10vh;
+	--footer-height: calc(var(--header-height) / 2);
+	--main-height: calc(100vh - var(--header-height) - var(--footer-height));
 	--nav-width: 70vw;
 	--stickyWidth: 30vw;
 	--desktopStickyWidth: 10vw;
