added global a styling to app.postcss, created Card and Subcard components to style about page

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -47,6 +47,15 @@
 	--overlay: oklch(100% 0 0 / 0.08);
 }
 
+a {
+	color: var(--link);
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 /* https://www.joshwcomeau.com/css/custom-css-reset/  */
 
 /*
