--- a/src/app.postcss
+++ b/src/app.postcss
@@ -50,11 +50,15 @@
 a {
 	color: var(--link);
 	text-decoration: none;
-}
+	border-bottom: 1px solid var(--yellow-3);
+	color: inherit;
+	transition: background 0.2s cubic-bezier(.33,.66,.66,1), color 0.2s cubic-bezier(.33,.66,.66,1);
+  }
 
-a:hover {
-	text-decoration: underline;
-}
+  a:hover {
+	background: var(--yellow-3);
+	color: var(--surface-2);
+  }
 
 /* https://www.joshwcomeau.com/css/custom-css-reset/  */
 
